--- a/program-quality.html
+++ b/program-quality.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Global Academy - Leadership & Management Program</title>
+    <title>Global Academy - Quality Programs</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="leadership, management, training, professional development" name="keywords">
-    <meta content="Comprehensive Leadership & Management program at Global Academy Alexandria" name="description">
+    <meta content="quality management, ISO standards, quality assurance, professional training" name="keywords">
+    <meta content="Comprehensive Quality Programs at Global Academy Alexandria" name="description">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -90,17 +90,17 @@
     <!-- Navbar End -->
 
     <!-- Header Start -->
-    <div class="container-fluid py-5 mb-5 page-header" style="background: linear-gradient(rgba(24, 29, 56, .7), rgba(24, 29, 56, .7)), url('https://images.unsplash.com/photo-1557804506-669a67965ba0?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&h=500') center center no-repeat; background-size: cover;">
+    <div class="container-fluid py-5 mb-5 page-header" style="background: linear-gradient(rgba(24, 29, 56, .7), rgba(24, 29, 56, .7)), url('https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&h=500') center center no-repeat; background-size: cover;">
         <div class="container py-5">
             <div class="row justify-content-center">
                 <div class="col-lg-10 text-center">
-                    <h1 class="display-3 text-white animated slideInDown">Leadership & Management</h1>
-                    <p class="fs-5 text-light mb-4">Develop Executive Skills • Build High-Performance Teams • Drive Organizational Change</p>
+                    <h1 class="display-3 text-white animated slideInDown">Quality Programs</h1>
+                    <p class="fs-5 text-light mb-4">ISO Standards • Quality Assurance • Continuous Improvement</p>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb justify-content-center">
                             <li class="breadcrumb-item"><a class="text-white" href="index.html">Home</a></li>
                             <li class="breadcrumb-item"><a class="text-white" href="programs.html">Programs</a></li>
-                            <li class="breadcrumb-item text-white active">Leadership & Management</li>
+                            <li class="breadcrumb-item text-white active">Quality Programs</li>
                         </ol>
                     </nav>
                 </div>
@@ -116,19 +116,19 @@
                 <div class="col-lg-8">
                     <div class="mb-5">
                         <h2 class="mb-4">Program Overview</h2>
-                        <p class="mb-4">Our Leadership & Management program is designed to develop the next generation of visionary leaders. This comprehensive program combines theoretical foundations with practical applications to enhance your leadership capabilities and management effectiveness.</p>
+                        <p class="mb-4">Our Quality Programs provide comprehensive training in quality management systems, ISO standards, and continuous improvement methodologies. Master the principles and practices that drive organizational excellence and customer satisfaction.</p>
                         
                         <div class="row g-4 mb-4">
                             <div class="col-md-6">
                                 <div class="bg-light rounded p-4 h-100">
                                     <h5 class="text-primary mb-3"><i class="fa fa-clock me-2"></i>Duration</h5>
-                                    <p class="mb-0">8 weeks intensive program<br>24 hours total training</p>
+                                    <p class="mb-0">Content will be added soon<br>Comprehensive training program</p>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="bg-primary rounded p-4 h-100 text-white">
                                     <h5 class="text-white mb-3"><i class="fa fa-certificate me-2"></i>Certification</h5>
-                                    <p class="mb-0">Global Academy Certificate<br>Internationally Recognized</p>
+                                    <p class="mb-0">Quality Management Certificate<br>Recognized Accreditation</p>
                                 </div>
                             </div>
                         </div>
@@ -138,37 +138,13 @@
                             <div class="col-md-6">
                                 <div class="d-flex align-items-center mb-3">
                                     <i class="fa fa-check-circle text-primary me-3"></i>
-                                    <span>Strategic Leadership & Vision Development</span>
-                                </div>
-                                <div class="d-flex align-items-center mb-3">
-                                    <i class="fa fa-check-circle text-primary me-3"></i>
-                                    <span>Team Building & Motivation Techniques</span>
-                                </div>
-                                <div class="d-flex align-items-center mb-3">
-                                    <i class="fa fa-check-circle text-primary me-3"></i>
-                                    <span>Conflict Resolution & Negotiation</span>
-                                </div>
-                                <div class="d-flex align-items-center mb-3">
-                                    <i class="fa fa-check-circle text-primary me-3"></i>
-                                    <span>Performance Management Systems</span>
+                                    <span>Content will be provided soon</span>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="d-flex align-items-center mb-3">
                                     <i class="fa fa-check-circle text-primary me-3"></i>
-                                    <span>Decision Making & Problem Solving</span>
-                                </div>
-                                <div class="d-flex align-items-center mb-3">
-                                    <i class="fa fa-check-circle text-primary me-3"></i>
-                                    <span>Change Management & Innovation</span>
-                                </div>
-                                <div class="d-flex align-items-center mb-3">
-                                    <i class="fa fa-check-circle text-primary me-3"></i>
-                                    <span>Communication & Presentation Skills</span>
-                                </div>
-                                <div class="d-flex align-items-center mb-3">
-                                    <i class="fa fa-check-circle text-primary me-3"></i>
-                                    <span>Emotional Intelligence & Self-Awareness</span>
+                                    <span>Program details coming soon</span>
                                 </div>
                             </div>
                         </div>
@@ -178,36 +154,12 @@
                             <div class="accordion-item mb-3">
                                 <h2 class="accordion-header">
                                     <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#module1">
-                                        Module 1: Leadership Fundamentals
+                                        Module 1: Coming Soon
                                     </button>
                                 </h2>
                                 <div id="module1" class="accordion-collapse collapse show" data-bs-parent="#programModules">
                                     <div class="accordion-body">
-                                        Understanding leadership styles, developing your leadership philosophy, and building self-awareness as a leader.
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="accordion-item mb-3">
-                                <h2 class="accordion-header">
-                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#module2">
-                                        Module 2: Strategic Thinking & Vision
-                                    </button>
-                                </h2>
-                                <div id="module2" class="accordion-collapse collapse" data-bs-parent="#programModules">
-                                    <div class="accordion-body">
-                                        Developing strategic thinking capabilities, creating compelling visions, and aligning teams with organizational goals.
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="accordion-item mb-3">
-                                <h2 class="accordion-header">
-                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#module3">
-                                        Module 3: Team Leadership & Motivation
-                                    </button>
-                                </h2>
-                                <div id="module3" class="accordion-collapse collapse" data-bs-parent="#programModules">
-                                    <div class="accordion-body">
-                                        Building high-performance teams, motivation strategies, and creating positive team dynamics.
+                                        Program content will be added soon. Please check back later for detailed module information.
                                     </div>
                                 </div>
                             </div>
@@ -222,22 +174,21 @@
                             <i class="fa fa-calendar-alt text-primary me-3"></i>
                             <div>
                                 <strong>Start Date:</strong><br>
-                                Next intake: January 15, 2026
+                                To be announced
                             </div>
                         </div>
                         <div class="d-flex align-items-center mb-3">
                             <i class="fa fa-clock text-primary me-3"></i>
                             <div>
                                 <strong>Schedule:</strong><br>
-                                Weekends (Fri-Sat)<br>
-                                9:00 AM - 1:00 PM
+                                Details coming soon
                             </div>
                         </div>
                         <div class="d-flex align-items-center mb-3">
                             <i class="fa fa-users text-primary me-3"></i>
                             <div>
                                 <strong>Class Size:</strong><br>
-                                Maximum 25 participants
+                                Limited seats available
                             </div>
                         </div>
                         <div class="d-flex align-items-center mb-4">
@@ -255,12 +206,12 @@
                     <div class="bg-primary rounded p-5 text-white">
                         <h4 class="text-white mb-4">Who Should Attend?</h4>
                         <ul class="list-unstyled">
-                            <li class="mb-2"><i class="fa fa-check me-2"></i>Mid-level managers</li>
-                            <li class="mb-2"><i class="fa fa-check me-2"></i>Team leaders</li>
-                            <li class="mb-2"><i class="fa fa-check me-2"></i>Supervisors</li>
-                            <li class="mb-2"><i class="fa fa-check me-2"></i>Project managers</li>
-                            <li class="mb-2"><i class="fa fa-check me-2"></i>Aspiring leaders</li>
-                            <li class="mb-2"><i class="fa fa-check me-2"></i>Department heads</li>
+                            <li class="mb-2"><i class="fa fa-check me-2"></i>Quality managers</li>
+                            <li class="mb-2"><i class="fa fa-check me-2"></i>Quality assurance professionals</li>
+                            <li class="mb-2"><i class="fa fa-check me-2"></i>Operations managers</li>
+                            <li class="mb-2"><i class="fa fa-check me-2"></i>Process improvement specialists</li>
+                            <li class="mb-2"><i class="fa fa-check me-2"></i>ISO auditors</li>
+                            <li class="mb-2"><i class="fa fa-check me-2"></i>Manufacturing professionals</li>
                         </ul>
                     </div>
                 </div>
