--- a/diploma-womens-leadership.html
+++ b/diploma-womens-leadership.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-      <title>Global Academy - Professional Diplomas</title>
+  <title>Global Academy - Diploma in Women's Leadership</title>
   
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
@@ -81,15 +81,16 @@
     <!-- Navbar End -->
 
     <!-- Header Start -->
-    <div class="container-fluid bg-primary py-5 mb-5 page-header" style="background: linear-gradient(rgba(24, 29, 56, .7), rgba(24, 29, 56, .7)), url('https://images.unsplash.com/photo-1523050854058-8df90110c9f1?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80'); background-position: center center; background-repeat: no-repeat; background-size: cover;">
+    <div class="container-fluid bg-primary py-5 mb-5 page-header" style="background: linear-gradient(rgba(24, 29, 56, .7), rgba(24, 29, 56, .7)), url('https://images.unsplash.com/photo-1573497019940-1c28c88b4f3e?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80'); background-position: center center; background-repeat: no-repeat; background-size: cover;">
         <div class="container py-5">
             <div class="row justify-content-center">
                 <div class="col-lg-10 text-center">
-                    <h1 class="display-3 text-white animated slideInDown">Professional Diplomas</h1>
+                    <h1 class="display-3 text-white animated slideInDown">Women's Leadership Diploma</h1>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb justify-content-center">
                             <li class="breadcrumb-item"><a class="text-white" href="index.html">Home</a></li>
-                            <li class="breadcrumb-item text-white active" aria-current="page">Diplomas</li>
+                            <li class="breadcrumb-item"><a class="text-white" href="diplomas.html">Diplomas</a></li>
+                            <li class="breadcrumb-item text-white active">Women's Leadership</li>
                         </ol>
                     </nav>
                 </div>
@@ -99,76 +100,29 @@
     <!-- Header End -->
   
     <div class="container py-5">
-        <div class="text-center mb-5">
-            <h2 class="section-title">Our Professional Diplomas</h2>
-            <p class="lead">Comprehensive diploma programs for advanced professional development</p>
+        <div class="section-title-container">
+            <h2 class="section-title">Diploma in Women's Leadership</h2>
+            <div class="section-title-divider"></div>
         </div>
 
-  <div class="row g-4">
-
-    <!-- Diploma 1 -->
-    <div class="col-md-4">
-      <a href="diploma-training-development.html" class="card-link">
-        <div class="card shadow-sm h-100">
-          <img src="https://images.unsplash.com/photo-1573497019410-0e1c9a5f35d3?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&h=250" class="card-img-top" alt="Training and Development">
-          <div class="card-body text-center">
-            <h5 class="card-title">Training and Development</h5>
-          </div>
+        <div class="card shadow-sm p-4">
+            <div class="card-body">
+                <h4 class="card-title">About the Diploma</h4>
+                <p class="card-text">Leadership plays a pivotal and strategic role in guiding organizations and individuals toward excellence and innovation. This is often achieved by basing work on core concepts, the most important of which are shared vision, declared values, and a spirit of teamwork. Therefore, the program primarily aims to prepare a select group of future leaders and develop them into leadership and administrative cadres capable of facing future challenges. This is done through planning and implementing an integrated diploma to prepare women leaders and ensure the continued leadership of its officials by strengthening their leadership and administrative skills.</p>
+                <h4 class="card-title mt-4">Key Topics</h4>
+                <ul>
+                    <li>Leadership, its forms, and the challenges of women's leadership.</li>
+                    <li>Self-awareness and personality analysis.</li>
+                    <li>Results-based strategic planning.</li>
+                    <li>Crisis management.</li>
+                    <li>Public office ethics.</li>
+                    <li>Support and decision making.</li>
+                    <li>Managing and leading change.</li>
+                    <li>Fundamentals of financial management.</li>
+                </ul>
+            </div>
         </div>
-      </a>
     </div>
-
-    <!-- Diploma 2 -->
-    <div class="col-md-4">
-      <a href="diploma-accounting-finance.html" class="card-link">
-        <div class="card shadow-sm h-100">
-          <img src="https://images.unsplash.com/photo-1581091012184-7cbe64200b51?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&h=250" class="card-img-top" alt="Accounting and Finance">
-          <div class="card-body text-center">
-            <h5 class="card-title">Accounting and Finance</h5>
-          </div>
-        </div>
-      </a>
-    </div>
-
-    <!-- Diploma 3 -->
-    <div class="col-md-4">
-      <a href="diploma-management-science.html" class="card-link">
-        <div class="card shadow-sm h-100">
-          <img src="https://images.unsplash.com/photo-1581090700227-1c1aef4c82e5?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&h=250" class="card-img-top" alt="Management Sciences">
-          <div class="card-body text-center">
-            <h5 class="card-title">Management Sciences</h5>
-          </div>
-        </div>
-      </a>
-    </div>
-
-    <!-- Diploma 4 -->
-    <div class="col-md-4">
-      <a href="diploma-womens-leadership.html" class="card-link">
-        <div class="card shadow-sm h-100">
-          <img src="https://images.unsplash.com/photo-1605902711622-cfb43c4437d2?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&h=250" class="card-img-top" alt="Women's Leadership">
-          <div class="card-body text-center">
-            <h5 class="card-title">Women's Leadership</h5>
-          </div>
-        </div>
-      </a>
-    </div>
-
-    <!-- Diploma 5 -->
-    <div class="col-md-4">
-      <a href="diploma-project-management.html" class="card-link">
-        <div class="card shadow-sm h-100">
-          <img src="https://images.unsplash.com/photo-1581091215367-59f1b6f8ec87?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&h=250" class="card-img-top" alt="Project Management">
-          <div class="card-body text-center">
-            <h5 class="card-title">Project Management</h5>
-          </div>
-        </div>
-      </a>
-    </div>
-
-  </div>
-</div>
-<!-- end section -->
 
     <!-- Footer Start -->
     <div class="container-fluid bg-dark text-light footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
@@ -194,31 +148,6 @@
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
-                <!-- Gallery
-                <div class="col-lg-3 col-md-6">
-                    <h4 class="text-white mb-3">Gallery</h4>
-                    <div class="row g-2 pt-2">
-                        <div class="col-4">
-                            <img class="img-fluid bg-light p-1" src="img/course-1.jpg" alt="">
-                        </div>
-                        <div class="col-4">
-                            <img class="img-fluid bg-light p-1" src="img/course-2.jpg" alt="">
-                        </div>
-                        <div class="col-4">
-                            <img class="img-fluid bg-light p-1" src="img/course-3.jpg" alt="">
-                        </div>
-                        <div class="col-4">
-                            <img class="img-fluid bg-light p-1" src="img/course-2.jpg" alt="">
-                        </div>
-                        <div class="col-4">
-                            <img class="img-fluid bg-light p-1" src="img/course-3.jpg" alt="">
-                        </div>
-                        <div class="col-4">
-                            <img class="img-fluid bg-light p-1" src="img/course-1.jpg" alt="">
-                        </div>
-                    </div>
-                </div>
-                -->
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-3">Newsletter</h4>
                     <p>Sign-up for our newsletter</p>
@@ -234,9 +163,7 @@
             <div class="copyright">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a class="border-bottom" href="#">Global Academy</a>, All Right Reserved.
-
-                        <!--/*** This template is free as long as you keep the footer author's credit link/attribution link/backlink. If you'd like to use the template without the footer author's credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
+                        &copy; <a class="border-bottom" href="#">Your Site Name</a>, All Right Reserved.
                         Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a><br><br>
                         Distributed By <a class="border-bottom" href="https://themewagon.com">ThemeWagon</a>
                     </div>
