--- a/index.html
+++ b/index.html
@@ -52,46 +52,36 @@
 
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
-                <!-- Regular Links -->
                 <a href="index.html" class="nav-item nav-link active">Home</a>
                 <a href="about.html" class="nav-item nav-link">About</a>
-
-                <!-- Programs Dropdown -->
                 <div class="nav-item dropdown">
-                    <a href="programs.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"
-                        onclick="window.location.href='programs.html'">Programs</a>
+                    <a href="programs.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" onclick="window.location.href='programs.html'">Programs</a>
                     <div class="dropdown-menu fade-down m-0">
-                        <a href="#" class="dropdown-item">Leadership & Management</a>
-                        <a href="#" class="dropdown-item">Marketing Programs</a>
-                        <a href="#" class="dropdown-item">Quality Programs</a>
-                        <!-- <a href="#" class="dropdown-item">Occupational Safety & Health</a> -->
-                        <a href="#" class="dropdown-item">Accounting & Finance</a>
-                        <a href="#" class="dropdown-item">Procurement & Supply Chain</a>
-                        <a href="#" class="dropdown-item">Human Resources</a>
-                        <a href="#" class="dropdown-item">Engineering Programs</a>
-                        <a href="#" class="dropdown-item">Quality Programs</a>
+                        <a href="engineering-programs.html" class="dropdown-item">Engineering Programs</a>
+                        <a href="program-leadership-management.html" class="dropdown-item">Leadership & Management</a>
+                        <a href="program-marketing.html" class="dropdown-item">Marketing Programs</a>
+                        <a href="program-quality.html" class="dropdown-item">Quality Programs</a>
+                        <a href="program-safety-health.html" class="dropdown-item">Safety & Health Programs</a>
+                        <a href="program-accounting-finance.html" class="dropdown-item">Accounting & Finance</a>
+                        <a href="program-procurement.html" class="dropdown-item">Procurement & Supply Chain</a>
+                        <a href="program-human-resources.html" class="dropdown-item">Human Resources</a>
                     </div>
                 </div>
-
-                <!-- Diplomas Dropdown -->
                 <div class="nav-item dropdown">
-                    <a href="diplomas.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"
-                      onclick="window.location.href='diplomas.html'">Diplomas</a>
+                    <a href="diplomas.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" onclick="window.location.href='diplomas.html'">Diplomas</a>
                     <div class="dropdown-menu fade-down m-0">
-                        <a href="#" class="dropdown-item">Training and Development</a>
-                        <a href="#" class="dropdown-item">Accounting and Finance</a>
-                        <a href="#" class="dropdown-item">Management Sciences</a>
-                        <a href="#" class="dropdown-item">Women's Leadership</a>
-                        <a href="#" class="dropdown-item">Project Management</a>
+                        <a href="diploma-training-development.html" class="dropdown-item">Training & Development</a>
+                        <a href="diploma-accounting-finance.html" class="dropdown-item">Accounting & Finance</a>
+                        <a href="diploma-management-science.html" class="dropdown-item">Management Science</a>
+                        <a href="diploma-womens-leadership.html" class="dropdown-item">Women's Leadership</a>
+                        <a href="diploma-project-management.html" class="dropdown-item">Project Management</a>
                     </div>
                 </div>
-
-                <!-- Contact Link -->
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
             </div>
 
             <!-- Button -->
-            <a href="#" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block cta-button">
+            <a href="contact.html" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block cta-button">
                 Join Now <i class="fa fa-arrow-right ms-3"></i>
             </a>
         </div>
@@ -105,10 +95,10 @@
             <h1 class="hero-title">Global Academy</h1>
             <p class="hero-subtitle">Transforming Careers Through World-Class Professional Development</p>
             <div class="hero-buttons">
-                <a href="#about" class="btn btn-primary btn-lg me-3">
+                <a href="programs.html" class="btn btn-primary btn-lg me-3">
                     <i class="fa fa-play me-2"></i>Explore Programs
                 </a>
-                <a href="#contact" class="btn btn-outline-light btn-lg">
+                <a href="contact.html" class="btn btn-outline-light btn-lg">
                     <i class="fa fa-user-plus me-2"></i>Join Now
                 </a>
             </div>
@@ -227,9 +217,6 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center mb-5">
-                    <div class="section-badge">
-                        <span>Our Programs</span>
-                    </div>
                     <h2 class="section-heading">Transform Your Career</h2>
                     <p class="section-subheading">Explore our comprehensive range of professional development programs</p>
                 </div>
