--- a/navbar.html
+++ b/navbar.html
@@ -12,8 +12,13 @@
             <div class="nav-item dropdown">
                 <a href="programs.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Programs</a>
                 <div class="dropdown-menu fade-down m-0">
-                    <a href="#" class="dropdown-item">Leadership & Management</a>
-                    <a href="#" class="dropdown-item">Marketing Programs</a>
+                    <a href="diplomas.html" class="dropdown-item">Diplomas</a>
+                    <a href="engineering-programs.html" class="dropdown-item">Engineering Programs</a>
+                    <a href="program-leadership-management.html" class="dropdown-item">Leadership & Management</a>
+                    <a href="program-marketing.html" class="dropdown-item">Marketing Programs</a>
+                    <a href="program-accounting-finance.html" class="dropdown-item">Accounting & Finance</a>
+                    <a href="program-procurement.html" class="dropdown-item">Procurement Programs</a>
+                    <a href="program-safety-health.html" class="dropdown-item">Safety & Health Programs</a>
                 </div>
             </div>
             <a href="contact.html" class="nav-item nav-link">Contact</a>
