--- a/program-marketing.html
+++ b/program-marketing.html
@@ -58,26 +58,26 @@
                 <a href="index.html" class="nav-item nav-link">Home</a>
                 <a href="about.html" class="nav-item nav-link">About</a>
                 <div class="nav-item dropdown">
-                    <a href="programs.html" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Programs</a>
+                    <a href="programs.html" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" onclick="window.location.href='programs.html'">Programs</a>
                     <div class="dropdown-menu fade-down m-0">
+                        <a href="engineering-programs.html" class="dropdown-item">Engineering Programs</a>
                         <a href="program-leadership-management.html" class="dropdown-item">Leadership & Management</a>
                         <a href="program-marketing.html" class="dropdown-item">Marketing Programs</a>
-                        <a href="program-safety-health.html" class="dropdown-item">Safety & Health</a>
+                        <a href="program-quality.html" class="dropdown-item">Quality Programs</a>
+                        <a href="program-safety-health.html" class="dropdown-item">Safety & Health Programs</a>
                         <a href="program-accounting-finance.html" class="dropdown-item">Accounting & Finance</a>
                         <a href="program-procurement.html" class="dropdown-item">Procurement & Supply Chain</a>
                         <a href="program-human-resources.html" class="dropdown-item">Human Resources</a>
-                        <a href="program-engineering.html" class="dropdown-item">Engineering Programs</a>
-                        <a href="program-quality.html" class="dropdown-item">Quality Programs</a>
                     </div>
                 </div>
                 <div class="nav-item dropdown">
-                    <a href="diplomas.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Diplomas</a>
+                    <a href="diplomas.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" onclick="window.location.href='diplomas.html'">Diplomas</a>
                     <div class="dropdown-menu fade-down m-0">
-                        <a href="#" class="dropdown-item">Training and Development</a>
-                        <a href="#" class="dropdown-item">Accounting and Finance</a>
-                        <a href="#" class="dropdown-item">Management Sciences</a>
-                        <a href="#" class="dropdown-item">Women's Leadership</a>
-                        <a href="#" class="dropdown-item">Project Management</a>
+                        <a href="diploma-training-development.html" class="dropdown-item">Training & Development</a>
+                        <a href="diploma-accounting-finance.html" class="dropdown-item">Accounting & Finance</a>
+                        <a href="diploma-management-science.html" class="dropdown-item">Management Science</a>
+                        <a href="diploma-womens-leadership.html" class="dropdown-item">Women's Leadership</a>
+                        <a href="diploma-project-management.html" class="dropdown-item">Project Management</a>
                     </div>
                 </div>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
