--- a/programs.html
+++ b/programs.html
@@ -43,56 +43,59 @@
 
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
-                <!-- Regular Links -->
                 <a href="index.html" class="nav-item nav-link">Home</a>
                 <a href="about.html" class="nav-item nav-link">About</a>
-
-                <!-- Programs Dropdown -->
                 <div class="nav-item dropdown">
-                    <a href="programs.html" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown"
-                        onclick="window.location.href='programs.html'">Programs</a>
+                    <a href="programs.html" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" onclick="window.location.href='programs.html'">Programs</a>
                     <div class="dropdown-menu fade-down m-0">
-                        <a href="#" class="dropdown-item">Leadership & Management</a>
-                        <a href="#" class="dropdown-item">Marketing Programs</a>
-                        <a href="#" class="dropdown-item">Quality Programs</a>
-                        <!-- <a href="#" class="dropdown-item">Occupational Safety & Health</a> -->
-                        <a href="#" class="dropdown-item">Accounting & Finance</a>
-                        <a href="#" class="dropdown-item">Procurement & Supply Chain</a>
-                        <a href="#" class="dropdown-item">Human Resources</a>
-                        <a href="#" class="dropdown-item">Engineering Programs</a>
-                        <a href="#" class="dropdown-item">Quality Programs</a>
+                        <a href="engineering-programs.html" class="dropdown-item">Engineering Programs</a>
+                        <a href="program-leadership-management.html" class="dropdown-item">Leadership & Management</a>
+                        <a href="program-marketing.html" class="dropdown-item">Marketing Programs</a>
+                        <a href="program-quality.html" class="dropdown-item">Quality Programs</a>
+                        <a href="program-safety-health.html" class="dropdown-item">Safety & Health Programs</a>
+                        <a href="program-accounting-finance.html" class="dropdown-item">Accounting & Finance</a>
+                        <a href="program-procurement.html" class="dropdown-item">Procurement & Supply Chain</a>
+                        <a href="program-human-resources.html" class="dropdown-item">Human Resources</a>
                     </div>
                 </div>
-
-                <!-- Diplomas Dropdown -->
                 <div class="nav-item dropdown">
-                    <a href="diplomas.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"
-                      onclick="window.location.href='diplomas.html'">Diplomas</a>
+                    <a href="diplomas.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" onclick="window.location.href='diplomas.html'">Diplomas</a>
                     <div class="dropdown-menu fade-down m-0">
-                        <a href="#" class="dropdown-item">Training and Development</a>
-                        <a href="#" class="dropdown-item">Accounting and Finance</a>
-                        <a href="#" class="dropdown-item">Management Sciences</a>
-                        <a href="#" class="dropdown-item">Women's Leadership</a>
-                        <a href="#" class="dropdown-item">Project Management</a>
+                        <a href="diploma-training-development.html" class="dropdown-item">Training & Development</a>
+                        <a href="diploma-accounting-finance.html" class="dropdown-item">Accounting & Finance</a>
+                        <a href="diploma-management-science.html" class="dropdown-item">Management Science</a>
+                        <a href="diploma-womens-leadership.html" class="dropdown-item">Women's Leadership</a>
+                        <a href="diploma-project-management.html" class="dropdown-item">Project Management</a>
                     </div>
                 </div>
-
-
-                <!-- Contact Link -->
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
             </div>
 
             <!-- Button -->
-            <a href="#" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">
+            <a href="contact.html" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">
                 Join Now <i class="fa fa-arrow-right ms-3"></i>
             </a>
         </div>
     </nav>
-
-
     <!-- Navbar End -->
-  
 
+    <!-- Header Start -->
+    <div class="container-fluid bg-primary py-5 mb-5 page-header" style="background: linear-gradient(rgba(24, 29, 56, .7), rgba(24, 29, 56, .7)), url('https://images.unsplash.com/photo-1517245386807-bb43f82c33c4?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80'); background-position: center center; background-repeat: no-repeat; background-size: cover;">
+        <div class="container py-5">
+            <div class="row justify-content-center">
+                <div class="col-lg-10 text-center">
+                    <h1 class="display-3 text-white animated slideInDown">Our Professional Programs</h1>
+                    <nav aria-label="breadcrumb">
+                        <ol class="breadcrumb justify-content-center">
+                            <li class="breadcrumb-item"><a class="text-white" href="index.html">Home</a></li>
+                            <li class="breadcrumb-item text-white active" aria-current="page">Programs</li>
+                        </ol>
+                    </nav>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Header End -->
 
  <div class="container py-5">
   
@@ -105,146 +108,104 @@
 
     <!-- Program 1 -->
     <div class="col-md-4">
-      <div class="card shadow-sm h-100">
-        <img src="https://picsum.photos/400/250?random=1" class="card-img-top" alt="Leadership & Management">
-        <div class="card-body text-center">
-          <h5 class="card-title">Leadership & Management</h5>
+      <a href="program-leadership-management.html" class="card-link">
+        <div class="card shadow-sm h-100">
+          <img src="https://images.unsplash.com/photo-1557804506-669a67965ba0?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&h=250" class="card-img-top" alt="Leadership & Management">
+          <div class="card-body text-center">
+            <h5 class="card-title">Leadership & Management</h5>
+          </div>
         </div>
-      </div>
+      </a>
     </div>
 
     <!-- Program 2 -->
     <div class="col-md-4">
-      <div class="card shadow-sm h-100">
-        <img src="https://picsum.photos/400/250?random=2" class="card-img-top" alt="Marketing Programs">
-        <div class="card-body text-center">
-          <h5 class="card-title">Marketing Programs</h5>
+      <a href="program-marketing.html" class="card-link">
+        <div class="card shadow-sm h-100">
+          <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&h=250" class="card-img-top" alt="Marketing Programs">
+          <div class="card-body text-center">
+            <h5 class="card-title">Marketing Programs</h5>
+          </div>
         </div>
-      </div>
+      </a>
     </div>
 
     <!-- Program 3 -->
     <div class="col-md-4">
-      <div class="card shadow-sm h-100">
-        <img src="https://picsum.photos/400/250?random=3" class="card-img-top" alt="Safety & Health">
-        <div class="card-body text-center">
-          <h5 class="card-title">Safety & Health</h5>
+      <a href="program-safety-health.html" class="card-link">
+        <div class="card shadow-sm h-100">
+          <img src="https://images.unsplash.com/photo-1584555613497-9ecf9dd06f68?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&h=250" class="card-img-top" alt="Safety & Health">
+          <div class="card-body text-center">
+            <h5 class="card-title">Safety & Health</h5>
+          </div>
         </div>
-      </div>
+      </a>
     </div>
 
     <!-- Program 4 -->
     <div class="col-md-4">
-      <div class="card shadow-sm h-100">
-        <img src="https://picsum.photos/400/250?random=4" class="card-img-top" alt="Accounting & Finance">
-        <div class="card-body text-center">
-          <h5 class="card-title">Accounting & Finance</h5>
+      <a href="program-accounting-finance.html" class="card-link">
+        <div class="card shadow-sm h-100">
+          <img src="https://images.unsplash.com/photo-1554224155-6726b3ff858f?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&h=250" class="card-img-top" alt="Accounting & Finance">
+          <div class="card-body text-center">
+            <h5 class="card-title">Accounting & Finance</h5>
+          </div>
         </div>
-      </div>
+      </a>
     </div>
 
     <!-- Program 5 -->
     <div class="col-md-4">
-      <div class="card shadow-sm h-100">
-        <img src="https://picsum.photos/400/250?random=5" class="card-img-top" alt="Procurement & Supply Chain">
-        <div class="card-body text-center">
-          <h5 class="card-title">Procurement & Supply Chain</h5>
+      <a href="program-procurement.html" class="card-link">
+        <div class="card shadow-sm h-100">
+          <img src="https://images.unsplash.com/photo-1586528116311-ad8dd3c8310d?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&h=250" class="card-img-top" alt="Procurement & Supply Chain">
+          <div class="card-body text-center">
+            <h5 class="card-title">Procurement & Supply Chain</h5>
+          </div>
         </div>
-      </div>
+      </a>
     </div>
 
     <!-- Program 6 -->
     <div class="col-md-4">
-      <div class="card shadow-sm h-100">
-        <img src="https://picsum.photos/400/250?random=6" class="card-img-top" alt="Human Resources">
-        <div class="card-body text-center">
-          <h5 class="card-title">Human Resources</h5>
+      <a href="program-human-resources.html" class="card-link">
+        <div class="card shadow-sm h-100">
+          <img src="https://images.unsplash.com/photo-1521791136064-7986c2920216?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&h=250" class="card-img-top" alt="Human Resources">
+          <div class="card-body text-center">
+            <h5 class="card-title">Human Resources</h5>
+          </div>
         </div>
-      </div>
+      </a>
     </div>
 
     <!-- Program 7 -->
     <div class="col-md-4">
-      <div class="card shadow-sm h-100">
-        <img src="https://picsum.photos/400/250?random=7" class="card-img-top" alt="Engineering Programs">
-        <div class="card-body text-center">
-          <h5 class="card-title">Engineering Programs</h5>
+      <a href="engineering-programs.html" class="card-link">
+        <div class="card shadow-sm h-100">
+          <img src="https://images.unsplash.com/photo-1581094794329-c8112a89af12?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&h=250" class="card-img-top" alt="Engineering Programs">
+          <div class="card-body text-center">
+            <h5 class="card-title">Engineering Programs</h5>
+          </div>
         </div>
-      </div>
+      </a>
     </div>
 
-    <!-- Additional Programs (Hidden Initially) -->
     <!-- Program 8 -->
-    <div class="col-md-4 program-item hidden-program" style="display: none;">
-      <div class="card shadow-sm h-100">
-        <img src="https://picsum.photos/400/250?random=8" class="card-img-top" alt="Digital Marketing">
-        <div class="card-body text-center">
-          <h5 class="card-title">Digital Marketing</h5>
+    <div class="col-md-4">
+      <a href="program-quality.html" class="card-link">
+        <div class="card shadow-sm h-100">
+          <img src="https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&h=250" class="card-img-top" alt="Quality Programs">
+          <div class="card-body text-center">
+            <h5 class="card-title">Quality Programs</h5>
+          </div>
         </div>
-      </div>
-    </div>
-
-    <!-- Program 9 -->
-    <div class="col-md-4 program-item hidden-program" style="display: none;">
-      <div class="card shadow-sm h-100">
-        <img src="https://picsum.photos/400/250?random=9" class="card-img-top" alt="Data Analytics">
-        <div class="card-body text-center">
-          <h5 class="card-title">Data Analytics</h5>
-        </div>
-      </div>
-    </div>
-
-    <!-- Program 10 -->
-    <div class="col-md-4 program-item hidden-program" style="display: none;">
-      <div class="card shadow-sm h-100">
-        <img src="https://picsum.photos/400/250?random=10" class="card-img-top" alt="Cybersecurity">
-        <div class="card-body text-center">
-          <h5 class="card-title">Cybersecurity</h5>
-        </div>
-      </div>
-    </div>
-
-    <!-- Program 11 -->
-    <div class="col-md-4 program-item hidden-program" style="display: none;">
-      <div class="card shadow-sm h-100">
-        <img src="https://picsum.photos/400/250?random=11" class="card-img-top" alt="Project Leadership">
-        <div class="card-body text-center">
-          <h5 class="card-title">Project Leadership</h5>
-        </div>
-      </div>
-    </div>
-
-    <!-- Program 12 -->
-    <div class="col-md-4 program-item hidden-program" style="display: none;">
-      <div class="card shadow-sm h-100">
-        <img src="https://picsum.photos/400/250?random=12" class="card-img-top" alt="International Business">
-        <div class="card-body text-center">
-          <h5 class="card-title">International Business</h5>
-        </div>
-      </div>
-    </div>
-
-    <!-- Program 13 -->
-    <div class="col-md-4 program-item hidden-program" style="display: none;">
-      <div class="card shadow-sm h-100">
-        <img src="https://picsum.photos/400/250?random=13" class="card-img-top" alt="Quality Programs">
-        <div class="card-body text-center">
-          <h5 class="card-title">Quality Programs</h5>
-          <p class="card-text text-muted">Quality Programs</p>
-        </div>
-      </div>
+      </a>
     </div>
 
   </div> <!-- row end -->
 
 </div>
 
-  <!-- Toggle Button -->
-  <div class="text-center mt-4">
-    <button id="toggleProgramsBtn" class="btn btn-primary py-3 px-5">
-      <i class="fas fa-plus me-2"></i>Show All Programs
-    </button>
-  </div>
 </div>
 <!-- end section -->
 
@@ -312,9 +273,9 @@
             <div class="copyright">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a class="border-bottom" href="#">Your Site Name</a>, All Right Reserved.
+                        &copy; <a class="border-bottom" href="#">Global Academy</a>, All Right Reserved.
 
-                        <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
+                        <!--/*** This template is free as long as you keep the footer author's credit link/attribution link/backlink. If you'd like to use the template without the footer author's credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
                         Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a><br><br>
                         Distributed By <a class="border-bottom" href="https://themewagon.com">ThemeWagon</a>
                     </div>
