--- a/program-marketing.html
+++ b/program-marketing.html
@@ -113,26 +113,91 @@
     <div class="container-xxl py-5">
         <div class="container">
             <div class="row g-5">
-                <div class="col-lg-8">
-                    <div class="mb-5">
-                        <h2 class="mb-4">Program Overview</h2>
-                        <p class="mb-4">Our comprehensive Marketing Programs are designed to equip professionals with cutting-edge marketing strategies and digital tools. Learn to create compelling campaigns, analyze market trends, and drive business growth through effective marketing techniques.</p>
-                        
-                        <div class="row g-4 mb-4">
-                            <div class="col-md-6">
-                                <div class="bg-light rounded p-4 h-100">
-                                    <h5 class="text-primary mb-3"><i class="fa fa-clock me-2"></i>Duration</h5>
-                                    <p class="mb-0">10 weeks comprehensive program<br>30 hours total training</p>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="bg-primary rounded p-4 h-100 text-white">
-                                    <h5 class="text-white mb-3"><i class="fa fa-certificate me-2"></i>Certification</h5>
-                                    <p class="mb-0">Digital Marketing Certificate<br>Industry Recognized</p>
-                                </div>
-                            </div>
+                <div class="col-lg-12">
+                    <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
+                        <h6 class="section-title bg-white text-center text-primary px-3">Programs</h6>
+                        <h1 class="mb-5">Marketing Programs</h1>
+                    </div>
+
+                    <div class="programs-list">
+                        <!-- Program 1 -->
+                        <div class="mb-4 p-4 bg-light rounded">
+                            <h4 class="text-primary mb-3">1. Marketing Strategies and Plans</h4>
+                            <p class="mb-3"><strong>About the Program:</strong><br>
+                            You will be able to build marketing plans and strategies that lead to increased organizational sales and gain customer loyalty by meeting their needs and retaining them.</p>
+                            <h6 class="fw-bold mb-2">Program Objectives:</h6>
+                            <ul>
+                                <li>Acquire new customers and persuade them to buy the product or service, which leads to increased profitability of the organization.</li>
+                                <li>Plan and develop products or services desired and required by the target market.</li>
+                                <li>Promote products and services, aiming to inform and convince customers about the goods and satisfy their needs and desires.</li>
+                                <li>Define various pricing, distribution, and promotion methods that reflect value and benefit for all.</li>
+                                <li>Provide technical and non-technical services before and after the sale process.</li>
+                                <li>Keep pace with continuous development and improvement and achieve the highest levels of competition in local and international markets.</li>
+                                <li>Develop the organization's market share in international markets.</li>
+                            </ul>
+                            <a href="contact.html" class="btn btn-primary mt-3">
+                                <i class="fa fa-user-plus me-2"></i>Enroll in This Program
+                            </a>
                         </div>
 
+                        <!-- Program 2 -->
+                        <div class="mb-4 p-4 bg-light rounded">
+                            <h4 class="text-primary mb-3">2. Digital Marketing</h4>
+                            <p class="mb-3"><strong>About the Program:</strong><br>
+                            You will be able to perform planning and follow-up tasks for marketing the organization's products and services through Internet channels and electronic applications. You will be able to provide customer care through social media.</p>
+                            <h6 class="fw-bold mb-2">Program Objectives:</h6>
+                            <ul>
+                                <li>Market services and products online.</li>
+                                <li>Plan the design of electronic commercial websites.</li>
+                                <li>Prepare and implement e-marketing strategies.</li>
+                                <li>Prepare and implement e-marketing tactics.</li>
+                                <li>Promotion and advertising via the Internet.</li>
+                            </ul>
+                            <a href="contact.html" class="btn btn-primary mt-3">
+                                <i class="fa fa-user-plus me-2"></i>Enroll in This Program
+                            </a>
+                        </div>
+
+                        <!-- Program 3 -->
+                        <div class="mb-4 p-4 bg-light rounded">
+                            <h4 class="text-primary mb-3">3. Customer Relationship and Experience Management (CRM/CEM)</h4>
+                            <p class="mb-3"><strong>About the Program:</strong><br>
+                            You will be able to perform the planning functions to build and apply a Customer Relationship Management (CRM) system to increase the organization's profitability and market share by increasing customer satisfaction and loyalty.</p>
+                            <h6 class="fw-bold mb-2">Program Objectives:</h6>
+                            <ul>
+                                <li>Apply Customer Relationship Management techniques.</li>
+                                <li>Manage Customer Experiences.</li>
+                                <li>Provide distinguished service to customers.</li>
+                                <li>Deal with customer complaints and suggestions.</li>
+                                <li>Plan Customer Relationship and Experience Management.</li>
+                            </ul>
+                            <a href="contact.html" class="btn btn-primary mt-3">
+                                <i class="fa fa-user-plus me-2"></i>Enroll in This Program
+                            </a>
+                        </div>
+
+                        <!-- Program 4 -->
+                        <div class="mb-4 p-4 bg-light rounded">
+                            <h4 class="text-primary mb-3">4. Skills for Customer Retention and Care</h4>
+                            <p class="mb-3"><strong>About the Program:</strong><br>
+                            You will be able to plan and organize to provide the best practices in customer care and retention, and offer them distinguished service. You will gain skills in effective communication with customers and positive dealing with customer complaints. You will also be able to deal professionally with the behavioral patterns of different customer personalities. You will gain the ability to measure customer loyalty to confirm the provision of customer care and retention.</p>
+                            <h6 class="fw-bold mb-2">Program Objectives:</h6>
+                            <ul>
+                                <li>Develop customer care programs and work on customer retention.</li>
+                                <li>Measure customer satisfaction and loyalty in a feasible and systematic way for care and retention.</li>
+                                <li>Work according to strategies and tactics related to customer retention and care.</li>
+                                <li>Deal with different behavioral patterns of customers.</li>
+                                <li>Deal with customer complaints and suggestions for care and retention.</li>
+                                <li>Effectively and distinguishably retain and care for customers to achieve their satisfaction and gain their loyalty.</li>
+                                <li>Apply strategies and best practices for customer retention and care.</li>
+                            </ul>
+                            <a href="contact.html" class="btn btn-primary mt-3">
+                                <i class="fa fa-user-plus me-2"></i>Enroll in This Program
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="text-center mt-5">
                         <h3 class="mb-4">What You'll Learn</h3>
                         <div class="row g-3 mb-4">
                             <div class="col-md-6">
@@ -212,56 +277,6 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-4">
-                    <div class="bg-light rounded p-5 mb-4">
-                        <h4 class="mb-4">Program Information</h4>
-                        <div class="d-flex align-items-center mb-3">
-                            <i class="fa fa-calendar-alt text-primary me-3"></i>
-                            <div>
-                                <strong>Start Date:</strong><br>
-                                Next intake: February 1, 2026
-                            </div>
-                        </div>
-                        <div class="d-flex align-items-center mb-3">
-                            <i class="fa fa-clock text-primary me-3"></i>
-                            <div>
-                                <strong>Schedule:</strong><br>
-                                Weekdays (Mon-Wed)<br>
-                                6:00 PM - 9:00 PM
-                            </div>
-                        </div>
-                        <div class="d-flex align-items-center mb-3">
-                            <i class="fa fa-users text-primary me-3"></i>
-                            <div>
-                                <strong>Class Size:</strong><br>
-                                Maximum 20 participants
-                            </div>
-                        </div>
-                        <div class="d-flex align-items-center mb-4">
-                            <i class="fa fa-map-marker-alt text-primary me-3"></i>
-                            <div>
-                                <strong>Location:</strong><br>
-                                Global Academy, Alexandria
-                            </div>
-                        </div>
-                        <a href="contact.html" class="btn btn-primary w-100 py-3">
-                            Enroll Now <i class="fa fa-arrow-right ms-2"></i>
-                        </a>
-                    </div>
-
-                    <div class="bg-primary rounded p-5 text-white">
-                        <h4 class="text-white mb-4">Who Should Attend?</h4>
-                        <ul class="list-unstyled">
-                            <li class="mb-2"><i class="fa fa-check me-2"></i>Marketing professionals</li>
-                            <li class="mb-2"><i class="fa fa-check me-2"></i>Business owners</li>
-                            <li class="mb-2"><i class="fa fa-check me-2"></i>Sales representatives</li>
-                            <li class="mb-2"><i class="fa fa-check me-2"></i>Brand managers</li>
-                            <li class="mb-2"><i class="fa fa-check me-2"></i>Content creators</li>
-                            <li class="mb-2"><i class="fa fa-check me-2"></i>Career changers</li>
-                        </ul>
                     </div>
                 </div>
             </div>
