--- a/about.html
+++ b/about.html
@@ -355,11 +355,7 @@
                     <div class="copyright">
                         <div class="row">
                             <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                                &copy; <a class="border-bottom" href="index.html">Global Academy</a>, All Right Reserved.
-
-                                <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                                Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a><br><br>
-                                Distributed By <a class="border-bottom" href="https://themewagon.com">ThemeWagon</a>
+                                &copy; <a class="border-bottom" href="#">Global Academy</a>, All Right Reserved.
                             </div>
                             <div class="col-md-6 text-center text-md-end">
                                 <div class="footer-menu">
