--- a/diploma-project-management.html
+++ b/diploma-project-management.html
@@ -120,6 +120,12 @@
                     <li>Project Risk and Quality Management.</li>
                     <li>Project Contracting and Procurement.</li>
                 </ul>
+                
+                <div class="text-center mt-4">
+                    <a href="contact.html" class="btn btn-primary btn-lg px-5 py-3">
+                        <i class="fa fa-user-plus me-2"></i>Enroll in This Diploma
+                    </a>
+                </div>
             </div>
         </div>
     </div>
@@ -163,9 +169,7 @@
             <div class="copyright">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a class="border-bottom" href="#">Your Site Name</a>, All Right Reserved.
-                        Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a><br><br>
-                        Distributed By <a class="border-bottom" href="https://themewagon.com">ThemeWagon</a>
+                        &copy; <a class="border-bottom" href="#">Global Academy</a>, All Right Reserved.
                     </div>
                     <div class="col-md-6 text-center text-md-end">
                         <div class="footer-menu">
