--- a/diplomas.html
+++ b/diplomas.html
@@ -81,7 +81,7 @@
     <!-- Navbar End -->
 
     <!-- Header Start -->
-    <div class="container-fluid bg-primary py-5 mb-5 page-header" style="background: linear-gradient(rgba(24, 29, 56, .7), rgba(24, 29, 56, .7)), url('https://images.unsplash.com/photo-1523050854058-8df90110c9f1?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80'); background-position: center center; background-repeat: no-repeat; background-size: cover;">
+    <div class="container-fluid py-5 mb-5 page-header" style="background: linear-gradient(rgba(24, 29, 56, .7), rgba(24, 29, 56, .7)), url('https://images.unsplash.com/photo-1541339907198-e08756dedf3f?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&h=500') center center no-repeat; background-size: cover;">
         <div class="container py-5">
             <div class="row justify-content-center">
                 <div class="col-lg-10 text-center">
@@ -110,7 +110,7 @@
     <div class="col-md-4">
       <a href="diploma-training-development.html" class="card-link">
         <div class="card shadow-sm h-100">
-          <img src="https://images.unsplash.com/photo-1573497019410-0e1c9a5f35d3?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&h=250" class="card-img-top" alt="Training and Development">
+          <img src="https://images.unsplash.com/photo-1552664730-d307ca884978?w=400&h=250&fit=crop" class="card-img-top" alt="Training and Development">
           <div class="card-body text-center">
             <h5 class="card-title">Training and Development</h5>
           </div>
@@ -122,7 +122,7 @@
     <div class="col-md-4">
       <a href="diploma-accounting-finance.html" class="card-link">
         <div class="card shadow-sm h-100">
-          <img src="https://images.unsplash.com/photo-1581091012184-7cbe64200b51?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&h=250" class="card-img-top" alt="Accounting and Finance">
+          <img src="https://images.unsplash.com/photo-1554224155-6726b3ff858f?w=400&h=250&fit=crop" class="card-img-top" alt="Accounting and Finance">
           <div class="card-body text-center">
             <h5 class="card-title">Accounting and Finance</h5>
           </div>
@@ -134,7 +134,7 @@
     <div class="col-md-4">
       <a href="diploma-management-science.html" class="card-link">
         <div class="card shadow-sm h-100">
-          <img src="https://images.unsplash.com/photo-1581090700227-1c1aef4c82e5?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&h=250" class="card-img-top" alt="Management Sciences">
+          <img src="https://images.unsplash.com/photo-1542744173-8e7e53415bb0?w=400&h=250&fit=crop" class="card-img-top" alt="Management Sciences">
           <div class="card-body text-center">
             <h5 class="card-title">Management Sciences</h5>
           </div>
@@ -146,7 +146,7 @@
     <div class="col-md-4">
       <a href="diploma-womens-leadership.html" class="card-link">
         <div class="card shadow-sm h-100">
-          <img src="https://images.unsplash.com/photo-1605902711622-cfb43c4437d2?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&h=250" class="card-img-top" alt="Women's Leadership">
+          <img src="https://images.unsplash.com/photo-1573497019940-1c28c88b4f3e?w=400&h=250&fit=crop" class="card-img-top" alt="Women's Leadership">
           <div class="card-body text-center">
             <h5 class="card-title">Women's Leadership</h5>
           </div>
@@ -158,7 +158,7 @@
     <div class="col-md-4">
       <a href="diploma-project-management.html" class="card-link">
         <div class="card shadow-sm h-100">
-          <img src="https://images.unsplash.com/photo-1581091215367-59f1b6f8ec87?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&h=250" class="card-img-top" alt="Project Management">
+          <img src="https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?w=400&h=250&fit=crop" class="card-img-top" alt="Project Management">
           <div class="card-body text-center">
             <h5 class="card-title">Project Management</h5>
           </div>
@@ -235,10 +235,6 @@
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
                         &copy; <a class="border-bottom" href="#">Global Academy</a>, All Right Reserved.
-
-                        <!--/*** This template is free as long as you keep the footer author's credit link/attribution link/backlink. If you'd like to use the template without the footer author's credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                        Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a><br><br>
-                        Distributed By <a class="border-bottom" href="https://themewagon.com">ThemeWagon</a>
                     </div>
                     <div class="col-md-6 text-center text-md-end">
                         <div class="footer-menu">
