--- a/programs.html
+++ b/programs.html
@@ -110,7 +110,7 @@
     <div class="col-md-4">
       <a href="program-leadership-management.html" class="card-link">
         <div class="card shadow-sm h-100">
-          <img src="https://images.unsplash.com/photo-1557804506-669a67965ba0?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&h=250" class="card-img-top" alt="Leadership & Management">
+          <img src="https://images.unsplash.com/photo-1557804506-669a67965ba0?w=400&h=250&fit=crop" class="card-img-top" alt="Leadership & Management">
           <div class="card-body text-center">
             <h5 class="card-title">Leadership & Management</h5>
           </div>
@@ -122,7 +122,7 @@
     <div class="col-md-4">
       <a href="program-marketing.html" class="card-link">
         <div class="card shadow-sm h-100">
-          <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&h=250" class="card-img-top" alt="Marketing Programs">
+          <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?w=400&h=250&fit=crop" class="card-img-top" alt="Marketing Programs">
           <div class="card-body text-center">
             <h5 class="card-title">Marketing Programs</h5>
           </div>
@@ -134,7 +134,7 @@
     <div class="col-md-4">
       <a href="program-safety-health.html" class="card-link">
         <div class="card shadow-sm h-100">
-          <img src="https://images.unsplash.com/photo-1584555613497-9ecf9dd06f68?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&h=250" class="card-img-top" alt="Safety & Health">
+          <img src="https://images.unsplash.com/photo-1504328345606-18bbc8c9d7d1?w=400&h=250&fit=crop" class="card-img-top" alt="Safety & Health">
           <div class="card-body text-center">
             <h5 class="card-title">Safety & Health</h5>
           </div>
@@ -146,7 +146,7 @@
     <div class="col-md-4">
       <a href="program-accounting-finance.html" class="card-link">
         <div class="card shadow-sm h-100">
-          <img src="https://images.unsplash.com/photo-1554224155-6726b3ff858f?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&h=250" class="card-img-top" alt="Accounting & Finance">
+          <img src="https://images.unsplash.com/photo-1554224155-6726b3ff858f?w=400&h=250&fit=crop" class="card-img-top" alt="Accounting & Finance">
           <div class="card-body text-center">
             <h5 class="card-title">Accounting & Finance</h5>
           </div>
@@ -158,7 +158,7 @@
     <div class="col-md-4">
       <a href="program-procurement.html" class="card-link">
         <div class="card shadow-sm h-100">
-          <img src="https://images.unsplash.com/photo-1586528116311-ad8dd3c8310d?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&h=250" class="card-img-top" alt="Procurement & Supply Chain">
+          <img src="https://images.unsplash.com/photo-1586528116311-ad8dd3c8310d?w=400&h=250&fit=crop" class="card-img-top" alt="Procurement & Supply Chain">
           <div class="card-body text-center">
             <h5 class="card-title">Procurement & Supply Chain</h5>
           </div>
@@ -170,7 +170,7 @@
     <div class="col-md-4">
       <a href="program-human-resources.html" class="card-link">
         <div class="card shadow-sm h-100">
-          <img src="https://images.unsplash.com/photo-1521791136064-7986c2920216?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&h=250" class="card-img-top" alt="Human Resources">
+          <img src="https://images.unsplash.com/photo-1521791136064-7986c2920216?w=400&h=250&fit=crop" class="card-img-top" alt="Human Resources">
           <div class="card-body text-center">
             <h5 class="card-title">Human Resources</h5>
           </div>
@@ -182,7 +182,7 @@
     <div class="col-md-4">
       <a href="engineering-programs.html" class="card-link">
         <div class="card shadow-sm h-100">
-          <img src="https://images.unsplash.com/photo-1581094794329-c8112a89af12?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&h=250" class="card-img-top" alt="Engineering Programs">
+          <img src="https://images.unsplash.com/photo-1581094794329-c8112a89af12?w=400&h=250&fit=crop" class="card-img-top" alt="Engineering Programs">
           <div class="card-body text-center">
             <h5 class="card-title">Engineering Programs</h5>
           </div>
@@ -194,7 +194,7 @@
     <div class="col-md-4">
       <a href="program-quality.html" class="card-link">
         <div class="card shadow-sm h-100">
-          <img src="https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&h=250" class="card-img-top" alt="Quality Programs">
+          <img src="https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?w=400&h=250&fit=crop" class="card-img-top" alt="Quality Programs">
           <div class="card-body text-center">
             <h5 class="card-title">Quality Programs</h5>
           </div>
@@ -274,10 +274,6 @@
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
                         &copy; <a class="border-bottom" href="#">Global Academy</a>, All Right Reserved.
-
-                        <!--/*** This template is free as long as you keep the footer author's credit link/attribution link/backlink. If you'd like to use the template without the footer author's credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                        Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a><br><br>
-                        Distributed By <a class="border-bottom" href="https://themewagon.com">ThemeWagon</a>
                     </div>
                     <div class="col-md-6 text-center text-md-end">
                         <div class="footer-menu">
