--- a/navbar.html
+++ b/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0">
+﻿<nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0">
     <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
         <h2 class="m-0 text-primary">Qdorat-Gate</h2>
     </a>
