--- a/diploma-training-development.html
+++ b/diploma-training-development.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -34,7 +34,7 @@
     <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0">
         <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
             <img src="533148242_122102107550975667_6846905199516547475_n.jpg" alt="Global Academy Logo" class="navbar-logo">
-            <h2 class="m-0 text-primary">Global Academy</h2>
+            <h2 class="m-0 text-primary" data-translate="academy_name">Global Academy</h2>
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -42,37 +42,52 @@
 
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
-                <a href="index.html" class="nav-item nav-link">Home</a>
-                <a href="about.html" class="nav-item nav-link">About</a>
+                <a href="index.html" class="nav-item nav-link" data-translate="nav_home">Home</a>
+                <a href="about.html" class="nav-item nav-link" data-translate="nav_about">About</a>
                 <div class="nav-item dropdown">
-                    <a href="programs.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" onclick="window.location.href='programs.html'">Programs</a>
+                    <a href="programs.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" onclick="window.location.href='programs.html'" data-translate="nav_programs">Programs</a>
                     <div class="dropdown-menu fade-down m-0">
-                        <a href="engineering-programs.html" class="dropdown-item">Engineering Programs</a>
-                        <a href="program-leadership-management.html" class="dropdown-item">Leadership & Management</a>
-                        <a href="program-marketing.html" class="dropdown-item">Marketing Programs</a>
-                        <a href="program-quality.html" class="dropdown-item">Quality Programs</a>
-                        <a href="program-safety-health.html" class="dropdown-item">Safety & Health Programs</a>
-                        <a href="program-accounting-finance.html" class="dropdown-item">Accounting & Finance</a>
-                        <a href="program-procurement.html" class="dropdown-item">Procurement & Supply Chain</a>
-                        <a href="program-human-resources.html" class="dropdown-item">Human Resources</a>
+                        <a href="engineering-programs.html" class="dropdown-item" data-translate="nav_engineering">Engineering Programs</a>
+                        <a href="program-leadership-management.html" class="dropdown-item" data-translate="nav_leadership">Leadership & Management</a>
+                        <a href="program-marketing.html" class="dropdown-item" data-translate="nav_marketing">Marketing Programs</a>
+                        <a href="program-quality.html" class="dropdown-item" data-translate="nav_quality">Quality Programs</a>
+                        <a href="program-safety-health.html" class="dropdown-item" data-translate="nav_safety">Safety & Health Programs</a>
+                        <a href="program-accounting-finance.html" class="dropdown-item" data-translate="nav_accounting">Accounting & Finance</a>
+                        <a href="program-procurement.html" class="dropdown-item" data-translate="nav_procurement">Procurement & Supply Chain</a>
+                        <a href="program-human-resources.html" class="dropdown-item" data-translate="nav_hr">Human Resources</a>
                     </div>
                 </div>
                 <div class="nav-item dropdown">
                     <a href="diplomas.html" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" onclick="window.location.href='diplomas.html'">Diplomas</a>
                     <div class="dropdown-menu fade-down m-0">
-                        <a href="diploma-training-development.html" class="dropdown-item">Training & Development</a>
-                        <a href="diploma-accounting-finance.html" class="dropdown-item">Accounting & Finance</a>
-                        <a href="diploma-management-science.html" class="dropdown-item">Management Science</a>
-                        <a href="diploma-womens-leadership.html" class="dropdown-item">Women's Leadership</a>
-                        <a href="diploma-project-management.html" class="dropdown-item">Project Management</a>
+                        <a href="diploma-training-development.html" class="dropdown-item" data-translate="nav_training_diploma">Training & Development</a>
+                        <a href="diploma-accounting-finance.html" class="dropdown-item" data-translate="nav_accounting_diploma">Accounting & Finance</a>
+                        <a href="diploma-management-science.html" class="dropdown-item" data-translate="nav_management_diploma">Management Science</a>
+                        <a href="diploma-womens-leadership.html" class="dropdown-item" data-translate="nav_women_diploma">Women's Leadership</a>
+                        <a href="diploma-project-management.html" class="dropdown-item" data-translate="nav_project_diploma">Project Management</a>
                     </div>
                 </div>
-                <a href="contact.html" class="nav-item nav-link">Contact</a>
-            </div>
+                <a href="contact.html" class="nav-item nav-link" data-translate="nav_contact">Contact</a>
+                            
+                <!-- Language Selector -->
+                <div class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle d-flex align-items-center" data-bs-toggle="dropdown">
+                        <i class="fas fa-globe me-2"></i>
+                        <span id="currentLang">EN</span>
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-end fade-down">
+                        <a href="#" class="dropdown-item" onclick="switchLanguage('en'); return false;">
+                            English
+                        </a>
+                        <a href="#" class="dropdown-item" onclick="switchLanguage('ar'); return false;">
+                            Arabic
+                        </a>
+                    </div>
+                </div></div>
 
             <!-- Button -->
             <a href="contact.html" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">
-                Join Now <i class="fa fa-arrow-right ms-3"></i>
+                <span data-translate="btn_join">Join Now</span> <i class="fa fa-arrow-right ms-3"></i>
             </a>
         </div>
     </nav>
@@ -99,16 +114,16 @@
   
     <div class="container py-5">
         <div class="section-title-container">
-            <h2 class="section-title">Postgraduate Diploma in Training and Development</h2>
+            <h2 class="section-title" data-translate="diploma_td_title">Postgraduate Diploma in Training and Development</h2>
             <div class="section-title-divider"></div>
         </div>
 
         <div class="card shadow-sm p-4">
             <div class="card-body">
-                <h4 class="card-title">About the Diploma</h4>
-                <p class="card-text">This diploma presents the theories, applications, and skill development aspects of training and development. Participants will learn how to assess, design, develop, and implement a training program. The diploma will cover core training concepts, including overall needs assessment, trainee learning motivation, learning theories, and evaluation methods.</p>
+                <h4 class="card-title"><span data-translate="about_the_diploma">About the Diploma</span></h4>
+                <p class="card-text" data-translate="diploma_td_desc">This diploma presents the theories, applications, and skill development aspects of training and development. Participants will learn how to assess, design, develop, and implement a training program. The diploma will cover core training concepts, including overall needs assessment, trainee learning motivation, learning theories, and evaluation methods.</p>
                 
-                <h4 class="card-title mt-4">Key Topics</h4>
+                <h4 class="card-title mt-4"><span data-translate="key_topics_title">Key Topics</span></h4>
                 <ul>
                     <li>An overview of training and development.</li>
                     <li>Return on Investment (ROI) from training.</li>
@@ -133,15 +148,15 @@
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
-                    <h4 class="text-white mb-3">Quick Link</h4>
-                    <a class="btn btn-link" href="about.html">About Us</a>
-                    <a class="btn btn-link" href="contact.html">Contact Us</a>
+                    <h4 class="text-white mb-3"><span data-translate="footer_quick_links">Quick Link</span></h4>
+                    <a class="btn btn-link" href="about.html"><span data-translate="footer_about">About Us</span></a>
+                    <a class="btn btn-link" href="contact.html"><span data-translate="footer_contact">Contact Us</span></a>
                     <a class="btn btn-link" href="privacy.html">Privacy Policy</a>
                     <a class="btn btn-link" href="terms.html">Terms & Condition</a>
                     <a class="btn btn-link" href="faqs.html">FAQs & Help</a>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <h4 class="text-white mb-3">Contact</h4>
+                    <h4 class="text-white mb-3"><span data-translate="footer_contact_title">Contact</span></h4>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Egypt</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012</p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
@@ -153,10 +168,10 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <h4 class="text-white mb-3">Newsletter</h4>
-                    <p>Sign-up for our newsletter</p>
+                    <h4 class="text-white mb-3"><span data-translate="footer_newsletter">Newsletter</span></h4>
+                    <p><span data-translate="footer_newsletter_text">Sign-up for our newsletter</span></p>
                     <div class="position-relative mx-auto" style="max-width: 400px;">
-                        <input class="form-control border-0 w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
+                        <input class="form-control border-0 w-100 py-3 ps-4 pe-5" type="text" placeholder="<span data-translate="footer_email_placeholder">Your email</span>">
                         <button type="button"
                             class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
                     </div>
@@ -167,7 +182,7 @@
             <div class="copyright">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a class="border-bottom" href="#">Global Academy</a>, All Right Reserved.
+                        &copy; <a class="border-bottom" href="#">Global Academy</a>, <span data-translate="footer_rights">All Right Reserved</span>.
                     </div>
                     <div class="col-md-6 text-center text-md-end">
                         <div class="footer-menu">
@@ -199,5 +214,6 @@
 
     <!-- Main JavaScript -->
     <script src="js/main.js"></script>
+    <script src="js/translate.js"></script>
 </body>
 </html>
