--- a/diplomas.html
+++ b/diplomas.html
@@ -34,7 +34,7 @@
     <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0">
         <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
             <img src="533148242_122102107550975667_6846905199516547475_n.jpg" alt="Global Academy Logo" class="navbar-logo">
-            <h2 class="m-0 text-primary">Global Academy</h2>
+            <h2 class="m-0 text-primary" data-translate="academy_name">Global Academy</h2>
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -42,39 +42,50 @@
 
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
-                <a href="index.html" class="nav-item nav-link">Home</a>
-                <a href="about.html" class="nav-item nav-link">About</a>
+                <a href="index.html" class="nav-item nav-link" data-translate="nav_home">Home</a>
+                <a href="about.html" class="nav-item nav-link" data-translate="nav_about">About</a>
                 <div class="nav-item dropdown">
-                    <a href="programs.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" onclick="window.location.href='programs.html'">Programs</a>
+                    <a href="programs.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" onclick="window.location.href='programs.html'" data-translate="nav_programs">Programs</a>
                     <div class="dropdown-menu fade-down m-0">
-                        <a href="engineering-programs.html" class="dropdown-item">Engineering Programs</a>
-                        <a href="program-leadership-management.html" class="dropdown-item">Leadership & Management</a>
-                        <a href="program-marketing.html" class="dropdown-item">Marketing Programs</a>
-                        <a href="program-quality.html" class="dropdown-item">Quality Programs</a>
-                        <a href="program-safety-health.html" class="dropdown-item">Safety & Health Programs</a>
-                        <a href="program-accounting-finance.html" class="dropdown-item">Accounting & Finance</a>
-                        <a href="program-procurement.html" class="dropdown-item">Procurement & Supply Chain</a>
-                        <a href="program-human-resources.html" class="dropdown-item">Human Resources</a>
+                        <a href="engineering-programs.html" class="dropdown-item" data-translate="nav_engineering">Engineering Programs</a>
+                        <a href="program-leadership-management.html" class="dropdown-item" data-translate="nav_leadership">Leadership & Management</a>
+                        <a href="program-marketing.html" class="dropdown-item" data-translate="nav_marketing">Marketing Programs</a>
+                        <a href="program-quality.html" class="dropdown-item" data-translate="nav_quality">Quality Programs</a>
+                        <a href="program-safety-health.html" class="dropdown-item" data-translate="nav_safety">Safety & Health Programs</a>
+                        <a href="program-accounting-finance.html" class="dropdown-item" data-translate="nav_accounting">Accounting & Finance</a>
+                        <a href="program-procurement.html" class="dropdown-item" data-translate="nav_procurement">Procurement & Supply Chain</a>
+                        <a href="program-human-resources.html" class="dropdown-item" data-translate="nav_hr">Human Resources</a>
                     </div>
                 </div>
                 <div class="nav-item dropdown">
                     <a href="diplomas.html" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" onclick="window.location.href='diplomas.html'">Diplomas</a>
                     <div class="dropdown-menu fade-down m-0">
-                        <a href="diploma-training-development.html" class="dropdown-item">Training & Development</a>
-                        <a href="diploma-accounting-finance.html" class="dropdown-item">Accounting & Finance</a>
-                        <a href="diploma-management-science.html" class="dropdown-item">Management Science</a>
-                        <a href="diploma-womens-leadership.html" class="dropdown-item">Women's Leadership</a>
-                        <a href="diploma-project-management.html" class="dropdown-item">Project Management</a>
+                        <a href="diploma-training-development.html" class="dropdown-item" data-translate="nav_training_diploma">Training & Development</a>
+                        <a href="diploma-accounting-finance.html" class="dropdown-item" data-translate="nav_accounting_diploma">Accounting & Finance</a>
+                        <a href="diploma-management-science.html" class="dropdown-item" data-translate="nav_management_diploma">Management Science</a>
+                        <a href="diploma-womens-leadership.html" class="dropdown-item" data-translate="nav_women_diploma">Women's Leadership</a>
+                        <a href="diploma-project-management.html" class="dropdown-item" data-translate="nav_project_diploma">Project Management</a>
                     </div>
                 </div>
 
                 <!-- Contact Link -->
-                <a href="contact.html" class="nav-item nav-link">Contact</a>
-            </div>
+                <a href="contact.html" class="nav-item nav-link" data-translate="nav_contact">Contact</a>
+                            
+                <!-- Language Selector -->
+                <div class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle d-flex align-items-center" data-bs-toggle="dropdown">
+                        <i class="fas fa-globe me-2"></i>
+                        <span id="currentLang">EN</span>
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-end fade-down">
+                        <a href="#" class="dropdown-item" onclick="switchLanguage('en'); return false;">English</a>
+                        <a href="#" class="dropdown-item" onclick="switchLanguage('ar'); return false;">Arabic</a>
+                    </div>
+                </div></div>
 
             <!-- Button -->
             <a href="contact.html" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">
-                Join Now <i class="fa fa-arrow-right ms-3"></i>
+                <span data-translate="btn_join">Join Now</span> <i class="fa fa-arrow-right ms-3"></i>
             </a>
         </div>
     </nav>
@@ -85,11 +96,11 @@
         <div class="container py-5">
             <div class="row justify-content-center">
                 <div class="col-lg-10 text-center">
-                    <h1 class="display-3 text-white animated slideInDown">Professional Diplomas</h1>
+                    <h1 class="display-3 text-white animated slideInDown" data-translate="header_diplomas_title">Professional Diplomas</h1>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb justify-content-center">
-                            <li class="breadcrumb-item"><a class="text-white" href="index.html">Home</a></li>
-                            <li class="breadcrumb-item text-white active" aria-current="page">Diplomas</li>
+                            <li class="breadcrumb-item"><a class="text-white" href="index.html" data-translate="breadcrumb_home">Home</a></li>
+                            <li class="breadcrumb-item text-white active" aria-current="page" data-translate="breadcrumb_diplomas">Diplomas</li>
                         </ol>
                     </nav>
                 </div>
@@ -100,8 +111,8 @@
   
     <div class="container py-5">
         <div class="text-center mb-5">
-            <h2 class="section-title">Our Professional Diplomas</h2>
-            <p class="lead">Comprehensive diploma programs for advanced professional development</p>
+            <h2 class="section-title" data-translate="diplomas_section_title">Our Professional Diplomas</h2>
+            <p class="lead" data-translate="diplomas_section_desc">Comprehensive diploma programs for advanced professional development</p>
         </div>
 
   <div class="row g-4">
@@ -112,7 +123,7 @@
         <div class="card shadow-sm h-100">
           <img src="https://images.unsplash.com/photo-1552664730-d307ca884978?w=400&h=250&fit=crop" class="card-img-top" alt="Training and Development">
           <div class="card-body text-center">
-            <h5 class="card-title">Training and Development</h5>
+            <h5 class="card-title" data-translate="diplomas_training_card">Training and Development</h5>
           </div>
         </div>
       </a>
@@ -124,7 +135,7 @@
         <div class="card shadow-sm h-100">
           <img src="https://images.unsplash.com/photo-1554224155-6726b3ff858f?w=400&h=250&fit=crop" class="card-img-top" alt="Accounting and Finance">
           <div class="card-body text-center">
-            <h5 class="card-title">Accounting and Finance</h5>
+            <h5 class="card-title" data-translate="diplomas_accounting_card">Accounting and Finance</h5>
           </div>
         </div>
       </a>
@@ -136,7 +147,7 @@
         <div class="card shadow-sm h-100">
           <img src="https://images.unsplash.com/photo-1542744173-8e7e53415bb0?w=400&h=250&fit=crop" class="card-img-top" alt="Management Sciences">
           <div class="card-body text-center">
-            <h5 class="card-title">Management Sciences</h5>
+            <h5 class="card-title" data-translate="diplomas_management_card">Management Sciences</h5>
           </div>
         </div>
       </a>
@@ -148,7 +159,7 @@
         <div class="card shadow-sm h-100">
           <img src="https://images.unsplash.com/photo-1573497019940-1c28c88b4f3e?w=400&h=250&fit=crop" class="card-img-top" alt="Women's Leadership">
           <div class="card-body text-center">
-            <h5 class="card-title">Women's Leadership</h5>
+            <h5 class="card-title" data-translate="diplomas_women_card">Women's Leadership</h5>
           </div>
         </div>
       </a>
@@ -160,7 +171,7 @@
         <div class="card shadow-sm h-100">
           <img src="https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?w=400&h=250&fit=crop" class="card-img-top" alt="Project Management">
           <div class="card-body text-center">
-            <h5 class="card-title">Project Management</h5>
+            <h5 class="card-title" data-translate="diplomas_project_card">Project Management</h5>
           </div>
         </div>
       </a>
@@ -175,15 +186,15 @@
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
-                    <h4 class="text-white mb-3">Quick Link</h4>
-                    <a class="btn btn-link" href="about.html">About Us</a>
-                    <a class="btn btn-link" href="contact.html">Contact Us</a>
+                    <h4 class="text-white mb-3"><span data-translate="footer_quick_links">Quick Link</span></h4>
+                    <a class="btn btn-link" href="about.html"><span data-translate="footer_about">About Us</span></a>
+                    <a class="btn btn-link" href="contact.html"><span data-translate="footer_contact">Contact Us</span></a>
                     <a class="btn btn-link" href="privacy.html">Privacy Policy</a>
                     <a class="btn btn-link" href="terms.html">Terms & Condition</a>
                     <a class="btn btn-link" href="faqs.html">FAQs & Help</a>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <h4 class="text-white mb-3">Contact</h4>
+                    <h4 class="text-white mb-3"><span data-translate="footer_contact_title">Contact</span></h4>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Egypt</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012</p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
@@ -220,10 +231,10 @@
                 </div>
                 -->
                 <div class="col-lg-3 col-md-6">
-                    <h4 class="text-white mb-3">Newsletter</h4>
-                    <p>Sign-up for our newsletter</p>
+                    <h4 class="text-white mb-3"><span data-translate="footer_newsletter">Newsletter</span></h4>
+                    <p><span data-translate="footer_newsletter_text">Sign-up for our newsletter</span></p>
                     <div class="position-relative mx-auto" style="max-width: 400px;">
-                        <input class="form-control border-0 w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
+                        <input class="form-control border-0 w-100 py-3 ps-4 pe-5" type="text" placeholder="<span data-translate="footer_email_placeholder">Your email</span>">
                         <button type="button"
                             class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
                     </div>
@@ -234,7 +245,7 @@
             <div class="copyright">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a class="border-bottom" href="#">Global Academy</a>, All Right Reserved.
+                        &copy; <a class="border-bottom" href="#">Global Academy</a>, <span data-translate="footer_rights">All Right Reserved</span>.
                     </div>
                     <div class="col-md-6 text-center text-md-end">
                         <div class="footer-menu">
@@ -266,5 +277,6 @@
 
     <!-- Main JavaScript -->
     <script src="js/main.js"></script>
+    <script src="js/translate.js"></script>
 </body>
 </html>
