--- a/program-quality.html
+++ b/program-quality.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -47,7 +47,7 @@
     <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0">
         <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
             <img src="533148242_122102107550975667_6846905199516547475_n.jpg" alt="Global Academy Logo" class="navbar-logo">
-            <h2 class="m-0 text-primary">Global Academy</h2>
+            <h2 class="m-0 text-primary" data-translate="academy_name">Global Academy</h2>
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -55,35 +55,49 @@
 
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
-                <a href="index.html" class="nav-item nav-link">Home</a>
-                <a href="about.html" class="nav-item nav-link">About</a>
+                <a href="index.html" class="nav-item nav-link" data-translate="nav_home" data-translate="nav_home">Home</a>
+                <a href="about.html" class="nav-item nav-link" data-translate="nav_about" data-translate="nav_about">About</a>
                 <div class="nav-item dropdown">
-                    <a href="programs.html" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" onclick="window.location.href='programs.html'">Programs</a>
+                    <a href="programs.html" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" onclick="window.location.href='programs.html'" data-translate="nav_programs" data-translate="nav_programs">Programs</a>
                     <div class="dropdown-menu fade-down m-0">
-                        <a href="engineering-programs.html" class="dropdown-item">Engineering Programs</a>
-                        <a href="program-leadership-management.html" class="dropdown-item">Leadership & Management</a>
-                        <a href="program-marketing.html" class="dropdown-item">Marketing Programs</a>
-                        <a href="program-quality.html" class="dropdown-item">Quality Programs</a>
-                        <a href="program-safety-health.html" class="dropdown-item">Safety & Health Programs</a>
-                        <a href="program-accounting-finance.html" class="dropdown-item">Accounting & Finance</a>
-                        <a href="program-procurement.html" class="dropdown-item">Procurement & Supply Chain</a>
-                        <a href="program-human-resources.html" class="dropdown-item">Human Resources</a>
+                        <a href="engineering-programs.html" class="dropdown-item" data-translate="nav_engineering">Engineering Programs</a>
+                        <a href="program-leadership-management.html" class="dropdown-item" data-translate="nav_leadership">Leadership & Management</a>
+                        <a href="program-marketing.html" class="dropdown-item" data-translate="nav_marketing">Marketing Programs</a>
+                        <a href="program-quality.html" class="dropdown-item" data-translate="nav_quality">Quality Programs</a>
+                        <a href="program-safety-health.html" class="dropdown-item" data-translate="nav_safety">Safety & Health Programs</a>
+                        <a href="program-accounting-finance.html" class="dropdown-item" data-translate="nav_accounting">Accounting & Finance</a>
+                        <a href="program-procurement.html" class="dropdown-item" data-translate="nav_procurement">Procurement & Supply Chain</a>
+                        <a href="program-human-resources.html" class="dropdown-item" data-translate="nav_hr">Human Resources</a>
                     </div>
                 </div>
                 <div class="nav-item dropdown">
-                    <a href="diplomas.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" onclick="window.location.href='diplomas.html'">Diplomas</a>
+                    <a href="diplomas.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" onclick="window.location.href='diplomas.html'" data-translate="nav_diplomas" data-translate="nav_diplomas">Diplomas</a>
                     <div class="dropdown-menu fade-down m-0">
-                        <a href="diploma-training-development.html" class="dropdown-item">Training & Development</a>
-                        <a href="diploma-accounting-finance.html" class="dropdown-item">Accounting & Finance</a>
-                        <a href="diploma-management-science.html" class="dropdown-item">Management Science</a>
-                        <a href="diploma-womens-leadership.html" class="dropdown-item">Women's Leadership</a>
-                        <a href="diploma-project-management.html" class="dropdown-item">Project Management</a>
+                        <a href="diploma-training-development.html" class="dropdown-item" data-translate="nav_training_diploma">Training & Development</a>
+                        <a href="diploma-accounting-finance.html" class="dropdown-item" data-translate="nav_accounting_diploma">Accounting & Finance</a>
+                        <a href="diploma-management-science.html" class="dropdown-item" data-translate="nav_management_diploma">Management Science</a>
+                        <a href="diploma-womens-leadership.html" class="dropdown-item" data-translate="nav_women_diploma">Women's Leadership</a>
+                        <a href="diploma-project-management.html" class="dropdown-item" data-translate="nav_project_diploma">Project Management</a>
                     </div>
                 </div>
-                <a href="contact.html" class="nav-item nav-link">Contact</a>
-            </div>
-            <a href="contact.html" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">
-                Enroll Now <i class="fa fa-arrow-right ms-3"></i>
+                <a href="contact.html" class="nav-item nav-link" data-translate="nav_contact" data-translate="nav_contact">Contact</a>
+                            
+                <!-- Language Selector -->
+                <div class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle d-flex align-items-center" data-bs-toggle="dropdown">
+                        <i class="fas fa-globe me-2"></i>
+                        <span id="currentLang">EN</span>
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-end fade-down">
+                        <a href="#" class="dropdown-item" onclick="switchLanguage('en'); return false;">
+                            English
+                        </a>
+                        <a href="#" class="dropdown-item" onclick="switchLanguage('ar'); return false;">
+                            Arabic
+                        </a>
+                    </div>
+                </div></div>
+            <a href="contact.html" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block" data-translate="btn_enroll" data-translate="btn_enroll">Enroll Now <i class="fa fa-arrow-right ms-3"></i>
             </a>
         </div>
     </nav>
@@ -94,13 +108,13 @@
         <div class="container py-5">
             <div class="row justify-content-center">
                 <div class="col-lg-10 text-center">
-                    <h1 class="display-3 text-white animated slideInDown">Quality Programs</h1>
+                    <h1 class="display-3 text-white animated slideInDown" data-translate="quality_title">Quality Programs</h1>
                     <p class="fs-5 text-light mb-4">ISO Standards • Quality Assurance • Continuous Improvement</p>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb justify-content-center">
-                            <li class="breadcrumb-item"><a class="text-white" href="index.html">Home</a></li>
-                            <li class="breadcrumb-item"><a class="text-white" href="programs.html">Programs</a></li>
-                            <li class="breadcrumb-item text-white active">Quality Programs</li>
+                            <li class="breadcrumb-item"><a class="text-white" href="index.html" data-translate="nav_home">Home</a></li>
+                            <li class="breadcrumb-item"><a class="text-white" href="programs.html" data-translate="nav_programs">Programs</a></li>
+                            <li class="breadcrumb-item text-white active" data-translate="quality_title">Quality Programs</li>
                         </ol>
                     </nav>
                 </div>
@@ -115,8 +129,8 @@
             <div class="row g-5">
                 <div class="col-lg-12">
                     <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-                        <h6 class="section-title bg-white text-center text-primary px-3">Programs</h6>
-                        <h1 class="mb-5">Quality Programs</h1>
+                        <h6 class="section-title bg-white text-center text-primary px-3" data-translate="nav_programs">Programs</h6>
+                        <h1 class="mb-5" data-translate="quality_title">Quality Programs</h1>
                     </div>
 
                     <div class="programs-list">
@@ -140,7 +154,7 @@
                         <!-- Program 2 -->
                         <div class="mb-4 p-4 bg-light rounded">
                             <h4 class="text-primary mb-3">2. Total Quality Management (TQM) and Continuous Improvement (Kaizen Methodology)</h4>
-                            <h6 class="fw-bold mb-2">Objectives:</h6>
+                            <h6 class="fw-bold mb-2"><span data-translate="objectives_title">Objectives:</span></h6>
                             <ul class="mb-3">
                                 <li>Identify the basic concepts of quality and Total Quality Management (TQM).</li>
                                 <li>TQM and spreading the culture of change.</li>
@@ -148,7 +162,7 @@
                                 <li>TQM and Continuous Improvement (Kaizen).</li>
                                 <li>Provide participants with the necessary skills and tools to apply the TQM concept.</li>
                             </ul>
-                            <h6 class="fw-bold mb-2">Main Axes:</h6>
+                            <h6 class="fw-bold mb-2"><span data-translate="main_axes_title">Main Axes:</span></h6>
                             <ul>
                                 <li>Quality Management.</li>
                                 <li>Total Quality Management.</li>
@@ -286,7 +300,7 @@
                         <!-- Program 9 -->
                         <div class="mb-4 p-4 bg-light rounded">
                             <h4 class="text-primary mb-3">9. Tools and Methodologies for Institutional Excellence and Quality Improvement</h4>
-                            <h6 class="fw-bold mb-2">Objectives:</h6>
+                            <h6 class="fw-bold mb-2"><span data-translate="objectives_title">Objectives:</span></h6>
                             <ul class="mb-3">
                                 <li>Realize modern quality principles that align with global market requirements.</li>
                                 <li>Realize the principles and standards of institutional excellence according to European Union specifications.</li>
@@ -297,7 +311,7 @@
                                 <li>Apply some Lean Enterprise tools to reduce waste and non-value-added activities.</li>
                                 <li>Apply various methodologies and models of institutional excellence in the work environment.</li>
                             </ul>
-                            <h6 class="fw-bold mb-2">Main Axes:</h6>
+                            <h6 class="fw-bold mb-2"><span data-translate="main_axes_title">Main Axes:</span></h6>
                             <ul>
                                 <li>Strategic competence for performance excellence in a competitive work environment.</li>
                                 <li>Strategic Quality: The optimal approach to facing challenges.</li>
@@ -313,7 +327,7 @@
                         <!-- Program 10 -->
                         <div class="mb-4 p-4 bg-light rounded">
                             <h4 class="text-primary mb-3">10. Certified Quality Manager</h4>
-                            <h6 class="fw-bold mb-2">Objectives:</h6>
+                            <h6 class="fw-bold mb-2"><span data-translate="objectives_title">Objectives:</span></h6>
                             <ul class="mb-3">
                                 <li>Be qualified to work as a Quality Manager who leads process improvement initiatives in the organization.</li>
                                 <li>Possess expertise in managing human resources and selecting the most competent elements to work in the quality field.</li>
@@ -324,7 +338,7 @@
                                 <li>Possess the skill of identifying and assessing risks and working to confront them.</li>
                                 <li>Be able to identify opportunities for improvement and work to advance the organization.</li>
                             </ul>
-                            <h6 class="fw-bold mb-2">Main Axes:</h6>
+                            <h6 class="fw-bold mb-2"><span data-translate="main_axes_title">Main Axes:</span></h6>
                             <ul>
                                 <li>Basic Quality.</li>
                                 <li>People Management.</li>
@@ -405,15 +419,15 @@
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
-                    <h4 class="text-white mb-3">Quick Link</h4>
-                    <a class="btn btn-link" href="about.html">About Us</a>
-                    <a class="btn btn-link" href="contact.html">Contact Us</a>
+                    <h4 class="text-white mb-3"><span data-translate="footer_quick_links">Quick Link</span></h4>
+                    <a class="btn btn-link" href="about.html"><span data-translate="footer_about">About Us</span></a>
+                    <a class="btn btn-link" href="contact.html"><span data-translate="footer_contact">Contact Us</span></a>
                     <a class="btn btn-link" href="privacy.html">Privacy Policy</a>
                     <a class="btn btn-link" href="terms.html">Terms & Condition</a>
                     <a class="btn btn-link" href="faqs.html">FAQs & Help</a>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <h4 class="text-white mb-3">Contact</h4>
+                    <h4 class="text-white mb-3"><span data-translate="footer_contact_title">Contact</span></h4>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Alexandria, Egypt</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+20 123 456 7890</p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@globalacademy.com</p>
@@ -425,10 +439,10 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <h4 class="text-white mb-3">Newsletter</h4>
+                    <h4 class="text-white mb-3"><span data-translate="footer_newsletter">Newsletter</span></h4>
                     <p>Stay updated with our latest programs</p>
                     <div class="position-relative mx-auto" style="max-width: 400px;">
-                        <input class="form-control border-0 w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
+                        <input class="form-control border-0 w-100 py-3 ps-4 pe-5" type="text" placeholder="<span data-translate="footer_email_placeholder">Your email</span>">
                         <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
                     </div>
                 </div>
@@ -438,7 +452,7 @@
             <div class="copyright">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a class="border-bottom" href="index.html">Global Academy</a>, All Right Reserved.
+                        &copy; <a class="border-bottom" href="index.html">Global Academy</a>, <span data-translate="footer_rights">All Right Reserved</span>.
                     </div>
                     <div class="col-md-6 text-center text-md-end">
                         <div class="footer-menu">
@@ -465,6 +479,7 @@
     <script src="lib/waypoints/waypoints.min.js"></script>
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/translate.js"></script>
 </body>
 
 </html>
